# TTS

./: .gitignore  Makefile  manage.py  pyproject.toml
TTSAPI/: asgi.py  celery.py  models.py  settings.py  urls.py  views.py  wsgi.py
TTSAPI/clients/: boto.py
TTSAPI/migrations/: 0001_initial.py  0002_transformationinfo_model_used.py  0003_transformationinfo_created_at_and_more.py
TTSAPI/serializers/: transformationInfo_serializer.py
TTSAPI/tasks/: transform_task.py
TTSAPI/utils/: s3.py
